--- a/assets/scss/baseline.scss
+++ b/assets/scss/baseline.scss
@@ -23,7 +23,7 @@
 /* = Set up baseline                                        = */
 /* ========================================================== */
 
-html{ font-size: 100.01%; }
+html{ font-size: 100%; }
 
 body{
 	font-size: $baseline;
@@ -65,8 +65,10 @@ body{
 
 a{
 	color:$link;
+    text-decoration: none;
 
 	&:hover, &:focus{
+        background: $select;
 	    color: $link_hover;
 	}
 
@@ -88,38 +90,53 @@ h1,h2,h3,h4,h5,h6{
     color: $heading_color;
 }
 
-h1{
-    font-size: 3em;
+.dayumdayumdayum {
+    font-size: 4.125em;
+    font-weight: 400;
     line-height: 1;
-    padding-top: 0.53em;
-    margin-bottom: 0.5em;
 }
-h2{
+
+h1, .alpha {
     font-size: 2em;
+    font-weight: 800;
     padding-top: 0.25em;
     margin-bottom: 0.5em;
 }
-h3{
+
+h2, .beta {
     font-size: 1.5em;
+    font-weight: 800;
     line-height: 1;
     padding-top: 0.35em;
     margin-bottom: 0.65em;
 }
-h4{
+
+h3, .gamma {
     font-size: 1.2em;
+    font-weight: 800;
     line-height: 1.25;
     padding-top: 0.45em;
     margin-bottom: 0.8em;
 }
-h5{
+
+h4, .delta {
     font-size: 1em;
-    font-weight: bold;
+    font-weight: 800;
+    line-height: 1.25;
+    padding-top: 0.45em;
+    margin-bottom: 0.8em;
+}
+
+h5, .epsilon {
+    font-size: 1.2em;
+    font-weight: 600;
     padding-top: 0.6em;
     margin-bottom: 0.9em;
 }
-h6{
+
+h6, .zeta {
     font-size: 1em;
-    font-weight: bold;
+    font-weight: 600;
     margin-bottom: 0;
 }
 
