--- a/assets/scss/baseline.scss
+++ b/assets/scss/baseline.scss
@@ -87,7 +87,7 @@ a{
 h1,h2,h3,h4,h5,h6{
 	margin-top:0;
     font-family: $heading_family;
-    color: $heading_color;
+    color: white;
 }
 
 .dayumdayumdayum {
