--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -128,6 +128,7 @@ $green: #6bac60;
 .icon-attention:before { content: '\26a0'; } /* '⚠' */
 .icon-eye:before { content: '\e70a'; } /* '' */
 .icon-code:before { content: '\e714'; } /* '' */
+.icon-address:before { content: '\e723'; } /* '' */
 .icon-publish:before { content: '\e74d'; } /* '' */
 .icon-flow-branch:before { content: '\e791'; } /* '' */
 .icon-gauge:before { content: '\e7a2'; } /* '' */
