--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -147,6 +147,7 @@ body {
 //	background: #E25A5A;
 //	background: #EE6F3E;
 	background: #fcfcfc;
+	background: green;
 }
 .page-header {
 	background-color: rgb(19, 130, 173);
